--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,17 @@
 kafka.brokers=localhost:9092
-kafka.zookeeper.connect=localhost:2181
 #输入主题
-kafka.index.source.topic=hawk-source-flink10
+kafka.index.source.topic=fink-index-source
 #输出主题
-kafka.index.sink.topic=hawk-sink-flink10
+kafka.index.sink.topic=fink-index-sink
 #是否开启快照
 flink.stream.checkpoint.enable=true
 #快照间隔（毫秒）
-flink.stream.checkpoint.interval=3000
+flink.stream.checkpoint.interval=10000
 #失败重试次数
 flink.fixed.delay.restart.times=4
 #失败重试间隔（毫秒）
 flink.fixed.delay.between.attempts=60000
 #计算任务并发度
-flink.stream.parallelism=5
+flink.stream.parallelism=2
 #输出任务并发度
 flink.sink.parallelism=1
